# logging-custom-for-json

./: README.md  bar.py  foo.py  log.conf  pyproject.toml
logging_exam/: bar_logging.py  logging.py
