[tool.poetry]
name = "logging-exam"
version = "0.1.0"
description = ""
authors = ["Yusuke MURAOKA <yusuke@jbking.org>"]

[tool.poetry.dependencies]
python = "^3.8"
python-json-logger = "^2.0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
